# models/book.js
@@ -16,14 +16,14 @@ sql.connect(function(err) {
 var Book = {};
 
 Book.create = function(newBook, cb){
-    sql.query('INSERT INTO books (title, author_first, author_last, binding_type, series, series_num, owner, isbn_13, isbn_10) VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?)', [newBook.title, newBook.author_first, newBook.author_last, newBook.binding_type, newBook.series, newBook.series_num, newBook.owner, newBook.isbn_13, newBook.isbn_10], function(err, res) {
+    sql.query('INSERT INTO books (title, author_first, author_last, format, series, series_num, owner, isbn_13, isbn_10) VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?)', [newBook.title, newBook.author_first, newBook.author_last, newBook.format, newBook.series, newBook.series_num, newBook.owner, newBook.isbn_13, newBook.isbn_10], function(err, res) {
         if(err) throw err;
         cb(res);
     });
 }
 
 Book.update = function(id, book, cb) {
-    sql.query('UPDATE books SET title = ?, author_first = ?, author_last = ?, binding_type = ?, series = ?, series_num = ?, owner = ?, isbn_13 = ?, isbn_10 = ? WHERE id = ?', [book.title, book.author_first, book.author_last, book.binding_type, book.series, book.series_num, book.owner, book.isbn_13, book.isbn_10, id], function(err, res) {
+    sql.query('UPDATE books SET title = ?, author_first = ?, author_last = ?, format = ?, series = ?, series_num = ?, owner = ?, isbn_13 = ?, isbn_10 = ? WHERE id = ?', [book.title, book.author_first, book.author_last, book.format, book.series, book.series_num, book.owner, book.isbn_13, book.isbn_10, id], function(err, res) {
         if(err) throw err;
         cb(res);
     });
