# routes.js
@@ -29,7 +29,7 @@ module.exports = function(app, db) {
             title: req.body.title,
             author_first: req.body.author_first,
             author_last: req.body.author_last,
-            binding_type: req.body.binding_type,
+            format: req.body.format,
             series: req.body.series,
             series_num: req.body.series_num,
             isbn_13: req.body.isbn_13,
@@ -48,7 +48,7 @@ module.exports = function(app, db) {
             title: req.body.title,
             author_first: req.body.author_first,
             author_last: req.body.author_last,
-            binding_type: req.body.binding_type,
+            format: req.body.format,
             series: req.body.series,
             series_num: req.body.series_num,
             isbn_13: req.body.isbn_13,
