# swagger.json
@@ -2,7 +2,7 @@
   "swagger": "2.0",
   "info": {
     "title": "MyLib API Endpoints",
-    "description": "This is a backend API for MyLib",
+    "description": "Backend API for MyLib",
     "contact": {
       "name": "Matt Kluting",
       "email": "mkluting@gmail.com"
@@ -23,7 +23,7 @@
           "200": {
             "description": "200 response",
             "examples": {
-              "application/json": "[\r\n    {\r\n        id: 1,\r\n        title: \"Ex-Heroes\",\r\n        author_first: \"Peter\",\r\n        author_last: \"Clines\",\r\n        binding_type: \"Hardcover\",\r\n        series: \"Ex-Heroes\",\r\n        series_num: \"1\",\r\n        owner: \"Matt\",\r\n        isbn_13: \"978-0804136570\",\r\n        isbn_10: \"0804136572\"\r\n    },\r\n    {\r\n        id: 2,\r\n        title: \"Ex-Patriots\",\r\n        author_first: \"Peter\",\r\n        author_last: \"Clines\",\r\n        binding_type: \"Paperback\",\r\n        series: \"Ex-Heroes\",\r\n        series_num: \"2\",\r\n        owner: \"Matt\",\r\n        isbn_13: \"978-0804136594\",\r\n        isbn_10: \"0804136599\"\r\n},\r\n{\r\n        id: 3,\r\n        title: \"Ex-Communication\",\r\n        author_first: \"Peter\",\r\n        author_last: \"Clines\",\r\n        binding_type: \"Paperback\",\r\n        series: \"Ex-Heroes\",\r\n        series_num: \"3\",\r\n        owner: \"Matt\",\r\n        isbn_13: \"978-0385346825\",\r\n        isbn_10: \"0385346824\"\r\n    }\r\n]"
+              "application/json": "[\r\n    {\r\n        id: 1,\r\n        title: \"Ex-Heroes\",\r\n        author_first: \"Peter\",\r\n        author_last: \"Clines\",\r\n        format: \"Hardcover\",\r\n        series: \"Ex-Heroes\",\r\n        series_num: \"1\",\r\n        owner: \"Matt\",\r\n        isbn_13: \"978-0804136570\",\r\n        isbn_10: \"0804136572\"\r\n    },\r\n    {\r\n        id: 2,\r\n        title: \"Ex-Patriots\",\r\n        author_first: \"Peter\",\r\n        author_last: \"Clines\",\r\n        format: \"Paperback\",\r\n        series: \"Ex-Heroes\",\r\n        series_num: \"2\",\r\n        owner: \"Matt\",\r\n        isbn_13: \"978-0804136594\",\r\n        isbn_10: \"0804136599\"\r\n},\r\n{\r\n        id: 3,\r\n        title: \"Ex-Communication\",\r\n        author_first: \"Peter\",\r\n        author_last: \"Clines\",\r\n        format: \"Paperback\",\r\n        series: \"Ex-Heroes\",\r\n        series_num: \"3\",\r\n        owner: \"Matt\",\r\n        isbn_13: \"978-0385346825\",\r\n        isbn_10: \"0385346824\"\r\n    }\r\n]"
             }
           }
         }
@@ -34,6 +34,71 @@
         "summary": "Creates a book in the database",
         "produces": [
           "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "title",
+            "in": "formData",
+            "description": "Title of book",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "author_first",
+            "in": "formData",
+            "description": "First name of Author",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "author_last",
+            "in": "formData",
+            "description": "Last name of Author",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "format",
+            "in": "formData",
+            "description": "Binding Type of Book",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "series",
+            "in": "formData",
+            "description": "Series Name of Book",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "series_num",
+            "in": "formData",
+            "description": "Series Order of Book",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "isbn_13",
+            "in": "formData",
+            "description": "13 Digit ISBN of Book",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "isbn_10",
+            "in": "formData",
+            "description": "10 Digit ISBN of Book",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "owner",
+            "in": "formData",
+            "description": "Name of Owner",
+            "required": true,
+            "type": "string"
+          }
         ],
         "responses": {
           "200": {
@@ -68,7 +133,7 @@
           "200": {
             "description": "200 response",
             "examples": {
-              "application/json": "[\r\n    {\r\n        \"id\": 1,\r\n        \"title\": \"Ex-Heroes\",\r\n        \"author_first\": \"Peter\",\r\n        \"author_last\": \"Clines\",\r\n        \"binding_type\": \"Hardcover\",\r\n        \"series\": \"Ex-Heroes\",\r\n        \"series_num\": \"1\",\r\n        \"owner\": \"Matt\",\r\n        \"isbn_13\": \"978-0804136570\",\r\n        \"isbn_10\": \"0804136572\"\r\n    }\r\n]"
+              "application/json": "[\r\n    {\r\n        \"id\": 1,\r\n        \"title\": \"Ex-Heroes\",\r\n        \"author_first\": \"Peter\",\r\n        \"author_last\": \"Clines\",\r\n        \"format\": \"Hardcover\",\r\n        \"series\": \"Ex-Heroes\",\r\n        \"series_num\": \"1\",\r\n        \"owner\": \"Matt\",\r\n        \"isbn_13\": \"978-0804136570\",\r\n        \"isbn_10\": \"0804136572\"\r\n    }\r\n]"
             }
           }
         }
@@ -79,6 +144,79 @@
         "summary": "Updates a book with the given ID in the Database",
         "produces": [
           "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID of Book from database",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
+          },
+          {
+            "name": "title",
+            "in": "formData",
+            "description": "Title of book",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "author_first",
+            "in": "formData",
+            "description": "First name of Author",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "author_last",
+            "in": "formData",
+            "description": "Last name of Author",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "format",
+            "in": "formData",
+            "description": "Binding Type of Book",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "series",
+            "in": "formData",
+            "description": "Series Name of Book",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "series_num",
+            "in": "formData",
+            "description": "Series Order of Book",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "isbn_13",
+            "in": "formData",
+            "description": "13 Digit ISBN of Book",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "isbn_10",
+            "in": "formData",
+            "description": "10 Digit ISBN of Book",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "owner",
+            "in": "formData",
+            "description": "Name of Owner",
+            "required": true,
+            "type": "string"
+          }
         ],
         "responses": {
           "200": {
@@ -95,6 +233,16 @@
         "summary": "Delete a book with given ID from the Database",
         "produces": [
           "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID of Book from database",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
+          }
         ],
         "responses": {
           "200": {
@@ -130,6 +278,50 @@
         "produces": [
           "application/json"
         ],
+        "parameters": [
+          {
+            "name": "title",
+            "in": "formData",
+            "description": "Title of Movie",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "format",
+            "in": "formData",
+            "description": "Movie Format",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "director",
+            "in": "formData",
+            "description": "Name of Director",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "series",
+            "in": "formData",
+            "description": "Series name of Movie",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "series_num",
+            "in": "formData",
+            "description": "Series Order of Movie",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "owner",
+            "in": "formData",
+            "description": "Name of Owner",
+            "required": true,
+            "type": "string"
+          }
+        ],
         "responses": {
           "200": {
             "description": "200 response",
@@ -149,11 +341,21 @@
         "produces": [
           "application/json"
         ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID of Movie from database",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
+          }
+        ],
         "responses": {
           "200": {
             "description": "200 response",
             "examples": {
-              "application/json": "[\r\n    {\r\n        \"id\": 1,\r\n        \"title\": \"Ex-Heroes\",\r\n        \"author_first\": \"Peter\",\r\n        \"author_last\": \"Clines\",\r\n        \"binding_type\": \"Hardcover\",\r\n        \"series\": \"Ex-Heroes\",\r\n        \"series_num\": \"1\",\r\n        \"owner\": \"Matt\",\r\n        \"isbn_13\": \"978-0804136570\",\r\n        \"isbn_10\": \"0804136572\"\r\n    }\r\n]"
+              "application/json": "[\r\n    {\r\n        \"id\": 1,\r\n        \"title\": \"Ex-Heroes\",\r\n        \"author_first\": \"Peter\",\r\n        \"author_last\": \"Clines\",\r\n        \"format\": \"Hardcover\",\r\n        \"series\": \"Ex-Heroes\",\r\n        \"series_num\": \"1\",\r\n        \"owner\": \"Matt\",\r\n        \"isbn_13\": \"978-0804136570\",\r\n        \"isbn_10\": \"0804136572\"\r\n    }\r\n]"
             }
           }
         }
@@ -164,6 +366,58 @@
         "summary": "Updates a movie with the given ID in the Database",
         "produces": [
           "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID of Movie from database",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
+          },
+          {
+            "name": "title",
+            "in": "formData",
+            "description": "Title of Movie",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "format",
+            "in": "formData",
+            "description": "Movie Format",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "director",
+            "in": "formData",
+            "description": "Name of Director",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "series",
+            "in": "formData",
+            "description": "Series name of Movie",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "series_num",
+            "in": "formData",
+            "description": "Series Order of Movie",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "owner",
+            "in": "formData",
+            "description": "Name of Owner",
+            "required": true,
+            "type": "string"
+          }
         ],
         "responses": {
           "200": {
@@ -180,6 +434,16 @@
         "summary": "Delete a movie with given ID from the Database",
         "produces": [
           "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID of Movie from database",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
+          }
         ],
         "responses": {
           "200": {
@@ -221,9 +485,9 @@
             "type": "string",
             "description": "Last name of the author"
           },
-          "binding_type": {
+          "format": {
             "type": "string",
-            "description": "Binding type of the book",
+            "description": "Format of the book",
             "enum": ["Paperback", "Hardcover", "eBook", "Other"]
           },
           "series": {
@@ -259,7 +523,7 @@
           "type": "string",
           "description": "Title of Book"
         },
-        "type": {
+        "format": {
           "type": "string",
           "description": "Movie Format",
           "enum": ["DVD", "Blu-Ray", "VHS", "Digital", "Other"]
